log and vt